# wifi-multimeter

./: README.md
code-esp32/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
code-esp32/components/pwm_audio/: pwm_audio.c
code-esp32/components/pwm_audio/include/: pwm_audio.h
code-esp32/components/sensor/: ADS1015.c  ADS1015.cpp  CMakeLists.txt  INA226.c  ads1x1x.c  i2c_bus.c  ina226.c  measure.c  sensor.c
code-esp32/components/sensor/include/: ADS1015.h  INA226.h  ads1x1x.h  i2c_bus.h  ina226.h
code-esp32/components/web/: CMakeLists.txt  component.mk  dashboard.html  index.html  settings.html
code-esp32/components/web-dashboard/: CMakeLists.txt  index.html  index.js  settings.html
code-esp32/main/: CMakeLists.txt  file_manage.c  main.c  speech.c  web_server.c
code-esp32/main/include/: speech.h  web_server.h
code-esp32/speech/: is_update.sh  main.py  requirements.txt
file_serving/: sdkconfig.defaults
file_serving/components/sensor/include/: sensor.h
file_serving/components/web/: CMakeLists.txt  dashboard.html
file_serving/main/: CMakeLists.txt  file_server.c  main.c  upload_script.html  web_server.c
references/: Avago(Agilent)34401A原理图.rar
references/ADS1115/Adafruit_ADS1X15-master/: Adafruit_ADS1015.h
references/Avago(Agilent)34401A原理图/: 34401MAINBOARD.Sch  AC CIRCUIT.Sch  FUNCTIONSWITCH.Sch  HPIB&RS232.Sch  POWER_SUPPLY.Sch  REFERENCES.Sch  dcamplifierand ohms.Sch  front&rear.Sch  hostprocessor.Sch
references/INA226/CJMCU-226 资料/Arduino-INA226-程序/INA226_alert/: INA226_alert.ino
references/INA226/CJMCU-226 资料/Arduino-INA226-程序/INA226_latch/: INA226_latch.ino
references/INA226/CJMCU-226 资料/Arduino-INA226-程序/INA226_simple/: INA226_simple.ino
references/STM32F1-open-source-multimeter/: README.md
references/STM32F1-open-source-multimeter/hardware/: V15_USB_isolator.brd  V15_USB_isolator.lbr  V15_USB_isolator.sch  v15.brd  v15.lbr  v15.sch  v15.scr  v15_BOM.txt
restful/: mklittlefs  partitions_example.csv  sdkconfig.defaults
restful/main/: CMakeLists.txt  Kconfig.projbuild  esp_rest_main.c  rest_server.c
simulation/: measure.TSC  未命名.TSC
speech/: .gitignore  main.py
wifi-multimeter-pcb/: measure.sch  measure.sch-bak  mylib.bck  mylib.dcm  power.sch  power.sch-bak  speaker.sch  speaker.sch-bak  wifi-multimeter-cache.lib  wifi-multimeter.kicad_pcb  wifi-multimeter.sch  wifi-multimeter.sch-bak
